Fix Dark Mode Tailwind Configuration (it was react css)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,20 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "tailwindcss";
-@plugin '@tailwindcss/typography';
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
   --font-primary: 'Inter', sans-serif;
+  --color-bg-body: radial-gradient(circle at 50% 50vh, rgb(184, 255, 255) 0%, rgba(255, 255, 255, 1) 1000px);
+}
+
+.dark {
+  --color-bg-body: radial-gradient(circle at 50% 50vh, rgba(0,35,35,1) 0%, rgba(0,0,0,1) 1000px);
 }
 
 html {
   scroll-padding-top: 6rem;
-  scroll-behavior:  smooth;
 }
 
 body {
   overflow-x: hidden;
-  background: radial-gradient(circle at 50% 50vh, rgba(0,35,35,1) 0%, rgba(0,0,0,1) 1000px);
+  background: var(--color-bg-body);
 }
 
 @layer components {
